readme file and js updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Register for Full Stack Conf</title>
+	<title>Register for GE Minds + Machines 2017</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,7 +12,7 @@
 
     <header>
       <span class="logo">GE</span>
-      <h1>Minds + Machines 2018</h1>
+      <h1>Minds + Machines 2017</h1>
     </header>
 
     <form action="index.html" method="post" id="form" novalidate>
@@ -91,7 +91,6 @@
         <select id="payment" name="user_payment">
           <option value="creditcard">Credit Card</option>
           <option value="paypal">PayPal</option>
-          <option value="bitcoin">Bitcoin</option>
         </select>
 
         <div id="creditcard" class="credit-card paymentInfo">
@@ -138,10 +137,6 @@
 
         <div id="paypal" class="paymentInfo">
         	<p>If you selected the PayPal option we'll take you to Paypal's site to set up your billing information, when you click “Register” below.</p>
-        </div>
-
-        <div id="bitcoin" class="paymentInfo">
-        	<p>If you selected the Bitcoin option we'll take you to the Coinbase site to set up your billing information. Due to the nature of exchanging Bitcoin, all Bitcoin transactions will be final.</p>
         </div>
 
         <div class="btn-wrap">
